# simple_app_complete

./: README.md  pubspec.yaml
android/app/: build.gradle
ios/Runner/: bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_generated.dart  main.dart
lib/data/: hive_database.dart
lib/models/: note.dart  note_data.dart
lib/pages/: editing_note_page.dart  home_page.dart
lib/theme/: custom_colors.dart
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/rust.xcodeproj/: project.pbxproj
rust/rust.xcodeproj/project.xcworkspace/xcuserdata/kaimueller.xcuserdatad/: UserInterfaceState.xcuserstate
rust/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
