[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1"
iota-client = { version = "2.0.1-rc.7", default-features = false, features = [
    "tls",
] }

tokio = { version = "1.28.2", features = ["full"] }
anyhow = { version = "1.0.71" }

[lib]
crate-type = ["staticlib", "cdylib"]
